--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,5 +104,6 @@
         <a href="https://plus.google.com/114432517923423045208">By Gabriele Mariotti</a><br><br>
 
     ]]></string>
+    <string name="title_activity_activity_view_photo_chat">ActivityViewPhotoChat</string>
 
 </resources>
